# tama

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  install.py  plan_midi_composer.md  sshprod.sh
.claude/: settings.local.json
app/: settings.gradle.kts
app/composeApp/: build.gradle.kts
app/composeApp/src/androidMain/kotlin/it/curzel/tama/: MainActivity.kt  Platform.android.kt
app/composeApp/src/androidMain/res/values/: ic_launcher_background.xml  strings.xml
app/gradle/: libs.versions.toml
app/iosApp/Configuration/: Config.xcconfig
app/iosApp/iosApp.xcodeproj/: project.pbxproj
app/iosApp/iosApp/Assets.xcassets/AccentColor.colorset/: Contents.json
docs/: ASCII_ART_SHEETS.md  icon.aseprite  midi_composer.md
scripts/: generate_static.py
sprites/: neko_idle.txt  neko_sleep.txt  static.txt
src/: api.rs  content_parser.rs  lib.rs
src/ascii_art_converter/: converter.rs  main.rs  mod.rs
src/audio/: mod.rs
src/channel/: config.rs  content.rs  feed.rs  mod.rs
src/client/: auth.rs  auth_config.rs  config.rs  mod.rs
src/midi_composer/: channels.rs  engine.rs  main.rs  mod.rs
src/server/: auth.rs  auth_endpoints.rs  channel_endpoints.rs  jwt.rs  main.rs  middleware.rs  password.rs  rate_limiter.rs  server_logic.rs
src/tama/: main.rs
src/ui/: ascii_art_player.rs  loading.rs  mod.rs  remote.rs
static/: ascii.js  asciiCanvas.js  auth.js  content-editor.css  content-editor.html  create.js  index.html  main.js  midi-composer.html  midi.js  network.js  pixel-editor.html  privacy-policy.html  style.css
(+68 files in other folders)
